--- a/MCrypt/MCrypt.csproj
+++ b/MCrypt/MCrypt.csproj
@@ -137,6 +137,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cryptography\CrypterInfo.cs" />
+    <Compile Include="Resources\lang.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>lang.resx</DependentUpon>
+    </Compile>
     <Compile Include="Tools\Output.cs" />
     <Compile Include="Cryptography\CryptArgs.cs" />
     <Compile Include="Cryptography\TempCryptArgs.cs" />
@@ -196,12 +201,26 @@
     <Compile Include="UI\FolderTempOpenForm.Designer.cs">
       <DependentUpon>FolderTempOpenForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Resources\lang.fr.resx" />
+    <EmbeddedResource Include="Resources\lang.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>lang.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\MUpdate.dll" />
+    <EmbeddedResource Include="UI\AboutForm.fr.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\DecryptForm.fr.resx">
+      <DependentUpon>DecryptForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\DecryptForm.resx">
       <DependentUpon>DecryptForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\EncryptForm.fr.resx">
+      <DependentUpon>EncryptForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\EncryptForm.resx">
       <DependentUpon>EncryptForm.cs</DependentUpon>
@@ -211,8 +230,14 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\FileBrowserForm.fr.resx">
+      <DependentUpon>FileBrowserForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\FileBrowserForm.resx">
       <DependentUpon>FileBrowserForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\FolderTempOpenForm.fr.resx">
+      <DependentUpon>FolderTempOpenForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\SaveDirectoryUC.resx">
       <DependentUpon>SaveDirectoryUC.cs</DependentUpon>
@@ -243,6 +268,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MCryptIcon.ico" />
+    <EmbeddedResource Include="Resources\fr\MCrypt.resources.dll" />
+    <EmbeddedResource Include="Resources\fr\MUpdate.resources.dll" />
     <None Include="Resources\lock64.png" />
     <EmbeddedResource Include="Resources\BCrypt.Net-Next.dll" />
     <EmbeddedResource Include="Resources\System.Runtime.CompilerServices.Unsafe.dll" />
